<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.zschie.gdanskpostcards.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
                android:id="@+id/action_nav_home_to_nav_gallery"
                app:destination="@id/nav_gallery" />
        <action
                android:id="@+id/action_nav_home_to_nav_info"
                app:destination="@id/nav_info" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.zschie.gdanskpostcards.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/gdynia_gallery"
        android:name="com.zschie.gdanskpostcards.ui.gallery.GdyniaGalleryFragment"
        android:label="Gdynia"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/gdansk_gallery"
        android:name="com.zschie.gdanskpostcards.ui.gallery.GdanskGalleryFragment"
        android:label="Gdansk"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/sopot_gallery"
        android:name="com.zschie.gdanskpostcards.ui.gallery.SopotGalleryFragment"
        android:label="Sopot"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/other_gallery"
        android:name="com.zschie.gdanskpostcards.ui.gallery.OtherGalleryFragment"
        android:label="Other"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.zschie.gdanskpostcards.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_gallery_selector"
        android:name="com.zschie.gdanskpostcards.GallerySelector"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_gallery_selector" />
</navigation>